--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-news-servlet</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS 2 News Servlet</documented.name>
+		<documented.name>SemanticCMS News Servlet²</documented.name>
 		<documented.shortTitle>Servlet</documented.shortTitle>
 		<documented.url>https://semanticcms.com/news/servlet/</documented.url>
 		<documented.description>SemanticCMS newsfeeds in a Servlet environment.</documented.description>
@@ -91,7 +91,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 			<groupId>com.aoindustries</groupId><artifactId>ao-badges</artifactId><version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.0-validation-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId><artifactId>semanticcms-changelog-taglib</artifactId><version>2.0.0-SNAPSHOT</version>
